# edge-anomaly-detection

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
cmake/: FindDeepStream.cmake  FindTensorRT.cmake
configs/: demo_pedestrian.yaml  system_config.yaml
docker/: Dockerfile
include/eanom/config/: system_config.hpp
include/eanom/detectors/: common.hpp  motion_detector.hpp  padim_detector.hpp  scene_change_detector.hpp
include/eanom/ensemble/: score_fusion.hpp  temporal_smoother.hpp
include/eanom/events/: alert_generator.hpp
include/eanom/overlay/: visualizer.hpp
include/eanom/pipeline/: anomaly_pipeline.hpp
include/eanom/roi/: roi_manager.hpp
include/eanom/trt/: trt_engine.hpp
include/eanom/utils/: cuda_helpers.hpp  logger.hpp
scripts/: build_engines.sh  infer_video.sh
src/: main.cpp
src/config/: system_config.cpp
src/detectors/: motion_detector.cpp  padim_detector.cpp  scene_change_detector.cpp
src/ensemble/: score_fusion.cpp  temporal_smoother.cpp
src/events/: alert_generator.cpp
src/overlay/: visualizer.cpp
src/pipeline/: anomaly_pipeline.cpp
src/roi/: roi_manager.cpp
src/trt/: trt_engine.cpp
src/utils/: logger.cpp
tools/: benchmark.cpp
training/: README.md  pyproject.toml
training/src/eanom_train/: export_backbone.py  fit_padim.py
