[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eanom-train"
version = "0.1.0"
description = "PaDiM statistics fitting for the eanom C++ runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Khusan Abdirayimov", email = "khusanabdirayimov@gmail.com" },
]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "onnx>=1.15",
]

[project.optional-dependencies]
dev = ["ruff>=0.1", "mypy>=1.8", "pytest>=7.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/eanom_train"]
